JPS: library dependencies tracking for incremental analysis, initial implementation
GitOrigin-RevId: 64694475a6c5f582912a7085d5d96d1d2282fdf1